fixed avatar icon on header on mobile

--- a/static/css/components.css
+++ b/static/css/components.css
@@ -677,7 +677,7 @@ li {
 }
 
 .progress-bar-wrap {
-  width: 1rem;
+  width: 6rem;
 }
 
 /* Leaderboard */
